# domain-battle

./: .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: product-feature-request.md
.github/workflows/: ci.yml
docs/: CombatContext.drawio
domain/: __init__.py  battle_event_dispatcher.py  interfaces.py  value_objects.py
domain/_tests/: conftest.py  fakes.py  test_combat_integration.py  test_entity.py  test_entity_id.py  test_value_object.py
domain/_tests/integration/: test_complete_battle.py
domain/battle/: __init__.py  entity.py  exceptions.py  interfaces.py
domain/battle/events/: __factory__.py  __init__.py  event_handlers.py  events.py  mediator.py
domain/battle/value_objects/: __init__.py  battle_allies.py  interfaces.py  move.py  pass_turn_algorithm.py  team.py
domain/battle/value_objects/_tests/: test_move.py  test_pass_turn_regular.py
domain/character/: __init__.py  entity.py  exceptions.py  ext_interfaces.py  interfaces.py  value_objects.py
domain/character_combat_technique/: __init__.py  entity.py  interfaces.py  value_objects.py
domain/character_spell/: __init__.py  entity.py  interfaces.py  value_objects.py
domain/duel/: __init__.py  entity.py  exceptions.py  value_objects.py
domain/skill/: __init__.py  interfaces.py
domain/skill/combat_technique/: __init__.py  entity.py  exceptions.py  interfaces.py  value_objects.py
domain/skill/spell/: __init__.py  entity.py  exceptions.py  interfaces.py  value_objects.py
